--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server",
-    "build": "ng build --prod",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "angular-animations": "^0.11.0",
+    "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "ngx-bootstrap": "^8.0.0",
