fiz engines node

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vns-trips",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server",
