--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@popperjs/core": "^2.11.5",
     "angular-animations": "^0.11.0",
     "autoprefixer": "^10.4.5",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0-beta1",
     "express": "^4.18.1",
     "ngx-bootstrap": "^8.0.0",
     "ngx-toastr": "^15.0.0",
