--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.2",
-    "@angular/common": "^14.0.2",
-    "@angular/compiler": "^14.0.2",
-    "@angular/core": "^14.0.2",
-    "@angular/forms": "^14.0.2",
-    "@angular/localize": "^14.0.2",
-    "@angular/platform-browser": "^14.0.2",
-    "@angular/platform-browser-dynamic": "^14.0.2",
-    "@angular/router": "^14.0.2",
+    "@angular/animations": "^14.2.4",
+    "@angular/common": "^14.2.4",
+    "@angular/compiler": "^14.2.4",
+    "@angular/core": "^14.2.4",
+    "@angular/forms": "^14.2.4",
+    "@angular/localize": "^14.2.4",
+    "@angular/platform-browser": "^14.2.4",
+    "@angular/platform-browser-dynamic": "^14.2.4",
+    "@angular/router": "^14.2.4",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "angular-animations": "^0.11.0",
     "autoprefixer": "^10.4.5",
     "bootstrap": "^5.2.0-beta1",
+    "chart.js": "^3.9.1",
     "express": "^4.18.1",
     "ngx-bootstrap": "^8.0.0",
     "ngx-spinner": "^14.0.0",
@@ -39,8 +40,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.2",
-    "@angular/cli": "^14.0.2",
-    "@angular/compiler-cli": "^14.0.2",
+    "@angular/cli": "^14.2.4",
+    "@angular/compiler-cli": "^14.2.4",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^18.0.0",
     "jasmine-core": "~4.2.0",
