--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
+    "strictTemplates": true
   }
 }
