--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^3.9.1",
     "express": "^4.18.1",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-currency": "^2.5.3",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.5",
